# soundpipeline

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
scripts/: convert-markers.js
src/: config.rs  duration_checker.rs  encoders.rs  ffmpeg.rs  file_suggester.rs  format_parser.rs  format_selector.rs  lib.rs  main.rs  pipeline.rs  settings.rs  validator.rs
src/pipeline/: cleanup_step.rs  executor.rs  ffmpeg_step.rs  split_step.rs  step.rs  tag_step.rs  transcode_step.rs
