[package]
name = "soundpipeline"
version = "0.1.0"
edition = "2021"
authors = ["Crux <crux153@gmail.com>"]
description = "Extract and convert audio from video files with proper tagging"
repository = "https://github.com/crux153/soundpipeline"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
lofty = "0.22"
ffmpeg-sidecar = "2.0"
dialoguer = "0.11"
async-trait = "0.1"
hound = "3.5"
glob = "0.3"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"